--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,7 +82,7 @@ h6 {
     left: 0;
     width: 100%;
     box-shadow: var(--site-box-shadow);
-
+    z-index: 2;
     /* background: rgba(43, 218, 133, 0.5); */
 }
 
@@ -614,8 +614,8 @@ h6 {
 /* THE ANIMATED BORDER */
 .animatedborder {
     border: 1px solid #000;
-    width: 30px;
-    height: 70px;
+    width: 25px;
+    height: 40px;
     border-radius: 60px;
     -webkit-border-radius: 60px;
     -moz-border-radius: 60px;
@@ -626,14 +626,14 @@ h6 {
 
 /* THE ANIMATED SPAN */
 .animatedspan {
-    width: 20px;
-    height: 20px;
+    width: 10px;
+    height: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
     position: absolute;
-    left: 4px;
-    top: 45px;
+    left: 6px;
+    top: 20px;
     background: var(--senior-bg-color);
     border-radius: 50%;
     -webkit-border-radius: 50%;
@@ -647,11 +647,11 @@ h6 {
 /* THE ANIMATED SPAN KEYFRAME*/
 @keyframes bounce {
     0% {
-        top: 4px;
+        top: 14px;
     }
 
     100% {
-        top: 0% 50px;
+        top: 20px;
     }
 }
 
@@ -662,7 +662,7 @@ h6 {
     }
 
     100% {
-        top: 0% 50px;
+        top: 20px;
     }
 }
 
@@ -672,7 +672,8 @@ h6 {
     }
 
     100% {
-        top: 0% 50px;
+        top: 20px;
+
     }
 }
 
@@ -682,7 +683,7 @@ h6 {
     }
 
     100% {
-        top: 0% 50px;
+        top: 20px;
     }
 }
 
@@ -712,6 +713,341 @@ h6 {
     fill: var(--primary-bg-color);
 }
 
+/* THE SECONDWRAPPER */
+.secondwrapper {
+    display: flex;
+    flex-direction: column;
+    background-color: var(--primary-bg-color);
+    padding: var(--site-padding);
+    padding-top: 20px;
+}
+
+/* THE SECOND WRAPPER CHILD*/
+.secondwrapperchild {
+    display: flex;
+    gap: 2em;
+    align-items: center;
+}
+
+/* THE IMAGE AND CHILD */
+.imagenchild {
+    display: flex;
+    position: relative;
+}
+
+/* THE IMAGE AND IT'S BORDER */
+.imag {
+    border-radius: 30% 70% 70% 30% / 31% 39% 61% 69%;
+    border: 3px solid var(--senior-bg-color);
+    position: relative;
+    bottom: -0px;
+}
+
+
+/* THE IMAGE DIRECT */
+.tire {
+    border-radius: 30% 70% 70% 30% / 31% 39% 61% 69%;
+    background: var(--senior-bg-color);
+    position: relative;
+    bottom: -10px;
+    right: -10px;
+}
+
+/* THE LIL XPERIENCE */
+.lilx {
+    position: absolute;
+    background-color: var(--primary-bg-color);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 40% 60% 72% 28% / 33% 44% 56% 67%;
+    height: 150px;
+    width: 150px;
+    padding: 50px;
+}
+
+/* TARGETING THE LILX BY ITSELF */
+.lil_1 {
+    left: 260px;
+}
+
+/* THE SECOND ONE */
+.lil_2 {
+    bottom: 10px;
+    left: 290px;
+}
+
+/* THE THIRD ONE */
+.lil_3 {
+    top: 120px;
+    left: -70px;
+}
+
+/* THE LILX HEADER */
+.plusup {
+    display: flex;
+    align-items: center;
+    gap: 0.2em;
+    color: var(--senior-bg-color);
+}
+
+/* THE LILX HEADER | THE HEADER ITSELF */
+.plus {
+    margin-bottom: -10px;
+    font-size: 25px;
+}
+
+/* THE LILX HEADER | THE HEADER ITSELF | THE PLUS ICON*/
+.fa-plus {
+    margin-bottom: -10px;
+}
+
+
+/* THE LIL XPERIENCE | THE PARAGRAPH */
+.para {
+    font-size: 80%;
+    font-variant: small-caps;
+}
+
+/* FLEX BETWEEN BUTTON AND ABOUT ME */
+.about {
+    display: flex;
+    flex-direction: column;
+    gap: 3em;
+}
+
+/* THE ABOUT ME HEADER */
+.aboutme {
+    text-transform: capitalize;
+    color: var(--senior-bg-color);
+    font-size: 25px;
+    text-align: center;
+}
+
+/* THE ABOUT ME HEADER |  THE PARAGRAPH*/
+.diss {
+    text-align: center;
+}
+
+/* THE LIL XPERIENCE | THE BUTTON */
+.button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* THE LIL XPERIENCE | THE BUTTON | THE BUTTON ITSELF*/
+
+.btn {
+    padding: 10px;
+    border: none;
+    background: var(--senior-bg-color);
+    border-radius: 15px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
+    transition: padding .5s ease-in-out;
+    -webkit-transition: padding .5s ease-in-out;
+    -moz-transition: padding .5s ease-in-out;
+    -ms-transition: padding .5s ease-in-out;
+    -o-transition: padding .5s ease-in-out;
+}
+
+
+/* THE LIL XPERIENCE | THE BUTTON | THE BUTTON ITSELF HOVER EFFECT*/
+.btn:hover {
+    padding: 10px 20px;
+}
+
+
+/* THE LIL XPERIENCE | THE BUTTON | THE BUTTON ITSELF | THE READMORE TEXT*/
+.readmore {
+    color: #fff;
+    font-variant: small-caps;
+    font-size: 15px;
+    font-family: SourceBold;
+}
+
+
+/* MY SERVICES  */
+.myservices {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+}
+
+
+/* MY SERVICE HEADERS */
+.myservicesheaders {
+    text-align: center;
+}
+
+/* THE THREE BOXES */
+.three {
+    display: flex;
+    gap: 2em;
+}
+
+/* GENERAL NAME FOR THE BOXES */
+.box {
+    padding: 15px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    flex: 1;
+    background: white;
+}
+
+/* GENERAL NAME FOR THE BOXES THE HOVER EFFECT */
+.box:hover {
+    background-color: var(--senior-bg-color);
+    /* box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
+}
+
+/* THE BOX THE BUTTON HOVER EFFECT */
+.box:hover .btn {
+    background: #fff;
+}
+
+/* THE BOX THE BUTTON LINK HOVER EFFECT */
+.box:hover .btn a {
+    color: var(--senior-bg-color);
+
+}
+
+/* THE ICONS IN THE SERVICE BOX */
+.icony {
+    font-size: 40px;
+    color: var(--senior-bg-color);
+}
+
+/* THE ICONS IN THE SERVICE BOX HOVER EFFECT*/
+.box:hover .icony {
+    color: #fff;
+}
+
+/* THE HEADER IN  THE BOX */
+.head {
+    text-transform: capitalize;
+    font-size: 25px;
+    font-family: SourceBold;
+    color: var(--senior-bg-color);
+}
+
+
+/* THE HEADER IN  THE BOX HOVER EFFECT*/
+.box:hover .head {
+    color: #fff;
+}
+
+/* THE SERVICES ANIMATED BORDER */
+.animeborder {
+    margin: 40px 0px;
+}
+
+/* THE THIRD WRAPPER */
+.thirdwrapper {
+    margin-top: 50px;
+    padding: var(--site-padding);
+}
+
+/* THE HEADER IN THE THIRDWRAPPER */
+.pro {
+    padding-bottom: 40px;
+}
+
+/* MY PROJECTS */
+.myprojects {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    gap: 1em;
+}
+
+/* THE PROJECT CHILD */
+.projectchild {
+    background-color: rgba(0, 0, 0, 0.09);
+    padding: 1%;
+    position: relative;
+}
+
+/* THE PROJECT CHILD | PC */
+.pc {
+    display: flex;
+    gap: 1em;
+}
+
+/* THE MODAL WRAPPER */
+.modalwrapper {
+    position: relative;
+}
+
+/* THE MODAL WRAPPER LINK*/
+.modalwrapper a {
+    display: inline-block;
+    text-decoration: none;
+    padding: 15px;
+    background-color: #fff;
+    border-radius: 3px;
+    text-transform: uppercase;
+    color: #585858;
+    font-family: 'Roboto', sans-serif;
+}
+
+/* THE MODAL CONTENT*/
+.modal {
+    visibility: hidden;
+    opacity: 0;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 2;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(77, 77, 77, .7);
+    transition: all .4s;
+}
+
+/* THE MODAL CONTENT | TARGET EFFECT*/
+.modal:target {
+    visibility: visible;
+    opacity: 1;
+}
+
+/* THE HEADER IN THE PROJECT CHILD */
+.theheaders {
+    position: relative;
+    width: 100%;
+}
+
+/* THE HEADER IN THE PROJECT CHILD | THE TEXT ITSELF*/
+.inds {
+ visibility: hidden;
+ text-align: center;
+ padding: 6%;
+ width: 100%;
+ background: rgba(0, 0, 0,0.2);
+ color: #fff;
+}
+
+ 
+/* THE PROJECT CHILD | THE TEXT HOVER*/
+.projectchild:hover .inds {
+    visibility: visible;
+}
+
+
+
 /* THE MEDIA QUERIES */
 @media (max-width:350px) {
 
@@ -731,33 +1067,21 @@ h6 {
         width: 100%;
     }
 
-    /* THE BORDER */
-    div.animatedborder.anb {
-        width: 10px;
-        height: 35px;
+    /*  THE MENU/SLIDE BAR | MY SLIDE | REAL SLIDE | NAVIGATIONS| ACTIVE LINK && THE STATIC LINK*/
+    .slide_active_navigations,
+    .slide_navigations {
+        font-size: 100%;
     }
 
-    /* THE ANIMATED SPAN */
-    span.animatedspan {
-        width: 5px;
-        height: 5px;
+    /* THE SLIDE HANDLES | SLIDE TITLE*/
+    h1.slidetitle {
+        font-size: 100%;
     }
 
-        /*  THE MENU/SLIDE BAR | MY SLIDE | REAL SLIDE | NAVIGATIONS| ACTIVE LINK && THE STATIC LINK*/
-        .slide_active_navigations,
-        .slide_navigations {
-            font-size: 100%;
-        }
-
-        /* THE SLIDE HANDLES | SLIDE TITLE*/
-        h1.slidetitle {
-            font-size: 100%;
-        }
-    
-        /* THE SLIDE HANDLES | SLIDE SOCIAL ICON*/
-        a.slide_social_icon {
-            font-size: 100%;
-        } 
+    /* THE SLIDE HANDLES | SLIDE SOCIAL ICON*/
+    a.slide_social_icon {
+        font-size: 100%;
+    }
 
 }
 
@@ -793,6 +1117,23 @@ h6 {
 
 }
 
+@media (max-width:499px) {
+
+    /* THE IMAGE AND CHILD */
+    .imagenchild {
+        flex-direction: column;
+    }
+
+    /* THE LIL XPERIENCE */
+    .lilx {
+        background: white;
+        box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+        position: static;
+        border-radius: 0%;
+        width: 100%;
+    }
+}
+
 @media (max-width: 600px) {
 
     /* THE INTRODUCTION WRAPPER */
@@ -805,71 +1146,19 @@ h6 {
         font-size: 100%;
     }
 
-    /* THE BORDER */
-    div.animatedborder {
-        top: 1%;
-        width: 15px;
-        height: 40px;
+    /* THE IMAGE DIRECT */
+    .tire {
+        width: 100%;
+        height: 100%;
     }
-
-    /* THE ANIMATED SPAN */
-    .animatedspan {
-        width: 10px;
-        height: 10px;
-        left: 2px;
-        top: 23px;
-    }
-
-    /* THE ANIMATED SPAN KEYFRAME*/
-    @keyframes bounce {
-        0% {
-            top: 4px;
-        }
-
-        100% {
-            top: 23px;
-        }
-    }
-
-    /* THE ANIMATED | THE LI | SPAN BROSWER SUPPORT ANIMATION KEY FRAMES */
-    @-o-keyframes bounce {
-        0% {
-            top: 0;
-        }
-
-        100% {
-            top: 23px;
-        }
-    }
-
-    @-moz-keyframes bounce {
-        0% {
-            top: 0;
-        }
-
-        100% {
-            top: 23px;
-        }
-    }
-
-    @-webkit-keyframes bounce {
-        0% {
-            top: 0;
-        }
-
-        100% {
-            top: 23px;
-        }
-    }
-
 }
-
 
 @media (max-width:1000px) {
 
     /* THE HEADER */
     .the_header,
-    .wrapper {
+    .wrapper,
+    .secondwrapper {
         padding: var(--tab-padding);
     }
 
@@ -1002,8 +1291,21 @@ h6 {
         }
     }
 
-    /* THE ANIMATED BORDER */
-    .animatedborder {
-        top: 80px;
+    /* THE BORDER */
+    .theborder {
+        visibility: hidden;
     }
+
+    /* THE SECOND WRAPPER CHILD*/
+    .secondwrapperchild {
+        flex-direction: column;
+    }
+
+    /* THE THREE BOXES */
+    .three {
+        flex-direction: column;
+        gap: 1em;
+        width: 100%;
+    }
+
 }
